--- a/login.html
+++ b/login.html
@@ -31,14 +31,14 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
         
     <form class="form-container">
-      <h1 class="1">login</h1>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
+      <h1 class="wht">login</h1>
+        <div class="form-group wht">
+          <label for="exampleInputEmail ">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
 
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
+        <div class="form-group wht">
+          <label for="exampleInputPassword 1">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
         </div>
 
