--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       
 
     <a class="navbar-brand ">
-        <img class="logo" src="ghgh.jpg" title="jelajahgear">
+        <img class="logo" src="./img/ghgh.jpg" title="jelajahgear">
     </a>
     <form class="nav-item dropdown">
        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">kategori</a>
