--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     </form>
     
 
-      <form class="form-inline">
+      <form class="form-inline ">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
 
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light bg-light ">
       <form class="form-inline ">
-        <button class="btn btn-outline-secondary" type="button">Daftar</button>
+        <button class="btn btn-outline-secondary hdr" type="button">Daftar</button>
         <a href="login.html">
         <button class="btn btn-outline-success" type="button">Masuk</button>
         </a>
