--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   		
   			<div class="col-xs-2 col-sm-2 col-md-3 col-lg-3">
 		   		<a class="navbar-brand" href="#">
-			   	<img class="logo" src="./img/ghgh.jpg" title="jelajahgear">
+			   	<img class="logo img1" src="./img/ghgh.jpg" title="jelajahgear">
 			   </a>   	
 			</div>
 			
 			<div class="col-xs-2 col-sm-2 col-md-6 col-lg-6">
-				<div class="input-group">
+				<div class="input-group inp1">
 				  <input type="text" class="form-control" placeholder="mau belanja apa hari ini ?" aria-label="mau belanja apa hari ini ?" aria-describedby="basic-addon2">
 				  	<div class="input-group-append">
 					  <button class="btn btn-outline-light" type="button">Search
@@ -51,20 +51,15 @@
 			    </div>		      	
 			</div>		
 	</div>
-
-
-
-
-
-
-
-
-
+</div> 
+<div id="slider">
+	<img src="#">
+	<img src="#">
+	<img src="#">
+	<img src="#">
+	<img src="#">
 </div>
 
 
-
-
-    
   </body>
 </html>
