--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
     
     
 
@@ -52,14 +53,69 @@
 			</div>		
 	</div>
 </div> 
-<div id="slider">
-	<img src="#">
-	<img src="#">
-	<img src="#">
-	<img src="#">
-	<img src="#">
+
+<div class="popular shadow rounded">
+	<ul class="nav">
+		<li class="nav">
+			<div class="pop1">
+				<h5>pencarian popular</h5>
+			</div>
+		</li>
+
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<div class="pop2">
+					<h5>tenda rei</h5>
+				</div>
+			</a>
+		</li>
+
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<div class="pop2">
+					<h5>gloves kulit</h5>
+				</div>
+			</a>
+		</li>
+
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<div class="pop2">
+					<h5>tas carrier</h5>
+				</div>
+			</a>
+		</li>
+
+		<li class="nav-item">
+			<a class="nav-link" href="#">
+				<div class="pop2">
+					<h5>sandal gunung</h5>
+				</div>
+			</a>
+		</li>
+		
+	</ul>
+</div>
+
+<div class="container-fluid">
+	<div class="col-6">
+		<div class="slider">
+			<div class="slides">
+				<a class="slide"><img src="img/slide 1.jpg"></a>
+				<a class="slide"><img src="img/slide 2.jpg"></a>
+				<a class="slide"><img src="img/slide 3.jpg"></a>
+				<a class="slide"><img src="img/slide 4.jpg"></a>
+			</div>
+		</div>
+	</div>
+
+	<div class="col-6">
+		
+	</div>
 </div>
 
 
+<script src="js/jquery.js"></script>
+<script src="js/slider.js"></script>
   </body>
 </html>
